src/objects/Form_Control__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Label__c</fullName>
        <inlineHelpText>First create a Custom Label in Setup&gt;&gt;Custom Labels. Then input the Name of the previously created custom label.</inlineHelpText>
        <label>Custom Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Embedded Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipName>Form_Control1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Section</label>
        <referenceTo>Form_Section__c</referenceTo>
        <relationshipName>Form_Control</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipName>Form_Control</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Static_Text__c</fullName>
        <label>Static Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                    <label>Embedded Form</label>
                </value>
                <value>
                    <fullName>Toggle</fullName>
                </value>
                <value>
                    <fullName>Toggle Multiple</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>TextArea</fullName>
                </value>
                <value>
                    <fullName>Static Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Values__c</fullName>
        <description>Comma-separated values used in control types where values need to be specified.</description>
        <inlineHelpText>Comma-separated values used in control types where values need to be specified.</inlineHelpText>
        <label>Values</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Form Input</label>
    <nameField>
        <label>Form Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Inputs</pluralLabel>
    <recordTypes>
        <fullName>Date</fullName>
        <active>true</active>
        <description>Allows users to enter a date which is validated to ensure proper format.</description>
        <label>Date</label>
    </recordTypes>
    <recordTypes>
        <fullName>Date_Time</fullName>
        <active>true</active>
        <description>Allows users to enter a date/time which is validated to ensure proper format.</description>
        <label>Date Time</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email</fullName>
        <active>true</active>
        <description>Allows users to enter an email address which is validated to ensure proper format.</description>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Form</fullName>
        <active>true</active>
        <description>Allows users to inset a previously created form into a section of another form.</description>
        <label>Embedded Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Name</fullName>
        <active>true</active>
        <description>Allows users to enter a first name, last name or both</description>
        <label>Name</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone</fullName>
        <active>true</active>
        <description>Allows users to enter a phone number which is validated to ensure proper format.</description>
        <label>Phone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Picklist</fullName>
        <active>true</active>
        <description>Allows users to select values from lists that you define.</description>
        <label>Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Static_Text</fullName>
        <active>true</active>
        <description>Allows users to see static rich-text, including images, displayed on the form.</description>
        <label>Static Text</label>
    </recordTypes>
    <recordTypes>
        <fullName>Text</fullName>
        <active>true</active>
        <description>Allows users to enter a text string</description>
        <label>Text</label>
    </recordTypes>
    <recordTypes>
        <fullName>TextArea</fullName>
        <active>true</active>
        <description>Allows users to enter longer text in an expandable area.</description>
        <label>Text Area</label>
    </recordTypes>
    <recordTypes>
        <fullName>Toggle</fullName>
        <active>true</active>
        <description>Allows users to switch between active and inactive positions for a binary question.</description>
        <label>Toggle</label>
    </recordTypes>
    <recordTypes>
        <fullName>Toggle_Multiple</fullName>
        <active>true</active>
        <description>Allows users to select multiple responses from a list you define (i.e. check all that apply)</description>
        <label>Toggle Multiple</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Label_and_Custom_Label_cannot_Be_Blank</fullName>
        <active>true</active>
        <description>Both Label and Custom label cannot be left blank.</description>
        <errorConditionFormula>AND(
ISBLANK(Label__c ),
ISBLANK(Custom_Label__c )
)</errorConditionFormula>
        <errorDisplayField>Label__c</errorDisplayField>
        <errorMessage>You must enter a Label, Custom Label or both.  If both are entered, the Custom Label is displayed to users.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Blank_Spaces_in_Custom_Label</fullName>
        <active>true</active>
        <description>Ensure there are no blank spaces in custom label field</description>
        <errorConditionFormula>CONTAINS(Custom_Label__c, &quot; &quot;)</errorConditionFormula>
        <errorDisplayField>Custom_Label__c</errorDisplayField>
        <errorMessage>Enter the Name of a previously created Custom Label only.</errorMessage>
    </validationRules>
</CustomObject>